EProject-Phase-1/bridge/base/api-gateway-deployment.yaml
#! api-gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: api-gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: eproject-phase-1
            com.docker.compose.service: api-gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: eproject-phase-1
                com.docker.compose.service: api-gateway
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api-gateway
                  image: eproject-phase-1-api-gateway
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-gatewa-3003
                      containerPort: 3003
