EProject-Phase-1/bridge/base/auth-deployment.yaml
#! auth-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: auth
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: eproject-phase-1
            com.docker.compose.service: auth
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: eproject-phase-1
                com.docker.compose.service: auth
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: auth-service
                  image: eproject-phase-1-auth
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: auth-3000
                      containerPort: 3000
