EProject-Phase-1/bridge/base/order-deployment.yaml
#! order-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: order
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: order
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: eproject-phase-1
            com.docker.compose.service: order
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: eproject-phase-1
                com.docker.compose.service: order
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: order-service
                  image: eproject-phase-1-order
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: order-3002
                      containerPort: 3002
