EProject-Phase-1/bridge/base/product-deployment.yaml
#! product-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: product
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: product
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: eproject-phase-1
            com.docker.compose.service: product
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: eproject-phase-1
                com.docker.compose.service: product
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: product-service
                  image: eproject-phase-1-product
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: product-3001
                      containerPort: 3001
