EProject-Phase-1/bridge/base/api-gateway-expose.yaml
#! api-gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: api-gateway
spec:
    selector:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: api-gateway
    ports:
        - name: api-gatewa-3003
          port: 3003
          targetPort: api-gatewa-3003
