EProject-Phase-1/bridge/base/api-gateway-service.yaml
# check if there is at least one published port

#! api-gateway-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-gateway-published
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: api-gateway
spec:
    selector:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: api-gateway
    ports:
        - name: api-gatewa-8088
          port: 8088
          protocol: TCP
          targetPort: api-gatewa-3003

# check if there is at least one published port
