EProject-Phase-1/bridge/base/auth-expose.yaml
#! auth-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: auth
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: auth
spec:
    selector:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: auth
    ports:
        - name: auth-3000
          port: 3000
          targetPort: auth-3000
