EProject-Phase-1/bridge/base/order-expose.yaml
#! order-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: order
    namespace: eproject-phase-1
    labels:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: order
spec:
    selector:
        com.docker.compose.project: eproject-phase-1
        com.docker.compose.service: order
    ports:
        - name: order-3002
          port: 3002
          targetPort: order-3002
